--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,8 @@
+baseurl: /
+url: http://harishvc.github.io/
 markdown: redcarpet
 pygments: true
+//source:      _source
 gems:
   - jekyll-redirect-from
+exclude: [command.sh]
