--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,6 @@ tagline: "Connecting Ideas &amp; Getting Creative"
 markdown: redcarpet
 pygments: true
 exclude: [command.sh]
+permalink: pretty
 gems:
   - jekyll-redirect-from
